Align figures, add refs

--- a/report/mcsp_refs.bib
+++ b/report/mcsp_refs.bib
@@ -1,64 +1,3 @@
-@patent{p:mecchia02,
-  author      = "A. Mecchia and G. Nicollini and C. Pinna",
-  title       = "Digital Filter",
-  nationality = "United States",
-  number      = 6501406,
-  dayfiled    = 13,
-  monthfiled  = jul,
-  yearfiled   = 2001,
-  day         = 31,
-  month       = dec,
-  year        = 2002,
-  abstract    = ""
-};
-
-@other{mnist_dataset,
-  title = {TensorFlow MNIST Dataset and Softmax Regression},
-  day = {15},
-  month = {May},
-  year = {2018},
-  url = {https://data-flair.training/blogs/tensorflow-mnist-dataset/},
-}
-
-@article{dcgan_topology_image,
-  title = {DCGAN tutorial},
-  author = {Nathan Inkawhich},
-  year = {2017}
-}
-
-@article{vanilla_gan_topology_image,
-  title = {Vanilla GAN tutorial},
-  author = {Nathan Inkawhich},
-  year = {2017}
-}
-
-@other{tesla_p100,
-  title={NVIDIA Tesla P100},
-  url={https://www.nvidia.com/en-us/data-center/tesla-p100/}}
-
-@article{DBLP:journals/corr/abs-1710-10196,
-  author    = {Tero Karras and
-               Timo Aila and
-               Samuli Laine and
-               Jaakko Lehtinen},
-  title     = {Progressive Growing of GANs for Improved Quality, Stability, and Variation},
-  journal   = {CoRR},
-  volume    = {abs/1710.10196},
-  year      = {2017},
-  url       = {http://arxiv.org/abs/1710.10196},
-  archivePrefix = {arXiv},
-  eprint    = {1710.10196},
-  timestamp = {Mon, 13 Aug 2018 16:46:42 +0200},
-  biburl    = {https://dblp.org/rec/bib/journals/corr/abs-1710-10196},
-  bibsource = {dblp computer science bibliography, https://dblp.org}
-}
-
-@article{transposed_convolution,
-  author={Naoki Shibuya},
-  title={Up-sampling with Transposed Convolution},
-  url={https://medium.com/activating-robotic-minds/up-sampling-with-transposed-convolution-9ae4f2df52d0}
-}
-
 @other{adam_optimizer,
   title = {Gentle Introduction to the Adam Optimization Algorithm for Deep Learning},
   day = {3},
@@ -67,17 +6,30 @@
   url = {https://machinelearningmastery.com/adam-optimization-algorithm-for-deep-learning/},
 }
 
-% Journal references
-%-------------------
-@inproceedings{radford_2016,
-  author = {Radford, Alec and Metz, Luke and Chintala, Soumith},
-  year = {2016},
-  month = {11},
-  pages = {},
-  title = {Unsupervised Representation Learning with Deep
-                  Convolutional Generative Adversarial Networks}
+@article{krizhevsky_2017,
+ author = {Krizhevsky, Alex and Sutskever, Ilya and Hinton, Geoffrey E.},
+ title = {ImageNet Classification with Deep Convolutional Neural Networks},
+ journal = {Commun. ACM},
+ issue_date = {June 2017},
+ volume = {60},
+ number = {6},
+ month = may,
+ year = {2017},
+ issn = {0001-0782},
+ pages = {84--90},
+ numpages = {7},
+ publisher = {ACM},
+ address = {New York, NY, USA},
 }
 
+@other{cs231n,
+author={Karpathy, Andrej},
+title={Convolutional Neural Networks for Visual Recognition},
+url={http://cs231n.github.io/},
+}
+
+% Journal references
+%-------------------
 @article{lecun_1998,
   author={Y. {Lecun} and L. {Bottou} and Y. {Bengio} and P. {Haffner}},
   journal={Proceedings of the IEEE},
@@ -91,105 +43,46 @@
   month={Nov},
 };
 
-@incollection{goodfellow_2014,
-  title = {Generative Adversarial Nets},
-  author = {Goodfellow, Ian and Pouget-Abadie, Jean and Mirza, Mehdi
-                  and Xu, Bing and Warde-Farley, David and Ozair,
-                  Sherjil and Courville, Aaron and Bengio, Yoshua},
-  booktitle = {Advances in Neural Information Processing Systems 27},
-  editor = {Z. Ghahramani and M. Welling and C. Cortes and N. D.
-                  Lawrence and K. Q. Weinberger},
-  pages = {2672--2680},
-  year = {2014},
-  publisher = {Curran Associates, Inc.},
-  url = {http://papers.nips.cc/paper/5423-generative-adversarial-nets.pdf}
+@InProceedings{wang_2019,
+          author = {Wang, Xintao and Chan, Kelvin C.K. and Yu, Ke and Dong, Chao and Loy, Chen Change},
+          title = {EDVR: Video Restoration with Enhanced Deformable Convolutional Networks},
+          booktitle = {The IEEE Conference on Computer Vision and Pattern Recognition (CVPR) Workshops},
+          month = {June},
+          year = {2019}
+          }
+
+@article{yolov3,
+  title={YOLOv3: An Incremental Improvement},
+  author={Redmon, Joseph and Farhadi, Ali},
+  journal = {arXiv},
+  year={2018}
 }
 
+@INPROCEEDINGS{hogs,
+author={N. {Dalal} and B. {Triggs}},
+booktitle={2005 IEEE Computer Society Conference on Computer Vision and Pattern Recognition (CVPR'05)},
+title={Histograms of oriented gradients for human detection},
+year={2005},
+volume={1},
+number={},
+pages={886-893 vol. 1},
+ISSN={1063-6919},
+month={June},}
 
-@article{j:cijvat02,
-  author   = "E. Cijvat and S. Tadjpour and A.A. Abidi",
-  title    = "Spurious mixing of off-channel signals in a wireless receiver and the choice of {IF}",
-  journal  = IEEE_J_CASII,
-  volume   = 49,
-  number   = 8,
-  month    = aug,
-  year     = 2002,
-  pages    = "539--544",
-  abstract = ""
-};
+@misc{he_2015,
+    title={Deep Residual Learning for Image Recognition},
+    author={Kaiming He and Xiangyu Zhang and Shaoqing Ren and Jian Sun},
+    year={2015},
+    eprint={1512.03385},
+    archivePrefix={arXiv},
+    primaryClass={cs.CV}
+}
 
-@article{j:vaidyanathan90,
-  author   = "P. P. Vaidyanathan",
-  title    = "Multirate digital filters, filter banks, polyphase networks, and applications: a tutorial",
-  journal  = IEEE_J_PROC,
-  volume   = 78,
-  number   = 1,
-  month    = jan,
-  year     = 1990,
-  pages    = "56--93",
-  abstract = ""
-};
-
-@article{j:chandrakasan92,
-  author   = "A.P. Chandrakasan and S. Sheng and R.W. Brodersen",
-  title    = "Low-power {CMOS} digital design",
-  journal  = IEEE_J_JSSC,
-  volume   = 27,
-  number   = 4,
-  month    = apr,
-  year     = 1992,
-  pages    = "473--484",
-  abstract = ""
-};
-
-@article{j:considine,
-  author   = "V. Considine",
-  title    = "Digital complex sampling",
-  journal  = "{IEE} Electron. Lett.",
-  volume   = 19,
-  number   = 16,
-  month    = aug,
-  year     = 1983,
-  pages    = "608--609",
-  abstract = ""
-};
-
-@article{j:polyphase,
-  author   = "M. Bellanger and G. Bonnerot and M. Coudreuse",
-  title    = "Digital filtering by polyphase network: {A}pplication to sample-rate alteration and filter banks",
-  journal  = IEEE_J_ASSP,
-  volume   = 24,
-  number   = 2,
-  month    = apr,
-  year     = 1976,
-  pages    = "109--114",
-  abstract = ""
-};
-
-
-
-
-% Conference references
-%----------------------
-
-@inproceedings{c:fettweis99,
-  author    = "M. Henker and T. Hentschel and G. Fettweis",
-  title     = "Time-variant CIC-filters for sample rate conversion with arbitrary rational factors",
-  booktitle = "Proc. {IEEE} 6th IEEE Int. Conf. Electronics, Circuits and Systems",
-  volume    = 1,
-  month     = sep,
-  year      = 1999,
-  pages     = "67--70",
-  abstract  = ""
-};
-
-@inproceedings{c:yang96,
-  author    = "H.-K. Yang and W. M. Snelgrove",
-  title     = "High speed polyphase {CIC} decimation filters",
-  booktitle = "Proc. {IEEE} Int. Symp. Circuits Syst.",
-  volume    = 2,
-  month     = may,
-  year      = 1996,
-  pages     = "229--232",
-  abstract  = ""
-};
+@misc{teichmann_2018,
+    title={Detect-to-Retrieve: Efficient Regional Aggregation for Image Search},
+    author={Marvin Teichmann and Andre Araujo and Menglong Zhu and Jack Sim},
+    year={2018},
+    eprint={1812.01584},
+    archivePrefix={arXiv},
+    primaryClass={cs.CV}
+}
