--- a/report/mcsp_refs.bib
+++ b/report/mcsp_refs.bib
@@ -1,9 +1,24 @@
-@other{adam_optimizer,
-  title = {Gentle Introduction to the Adam Optimization Algorithm for Deep Learning},
-  day = {3},
-  month = {July},
-  year = {2017},
-  url = {https://machinelearningmastery.com/adam-optimization-algorithm-for-deep-learning/},
+@InProceedings{glorot10a,
+  title = 	 {Understanding the difficulty of training deep feedforward neural networks},
+  author = 	 {Xavier Glorot and Yoshua Bengio},
+  booktitle = 	 {Proceedings of the Thirteenth International Conference on Artificial Intelligence and Statistics},
+  pages = 	 {249--256},
+  year = 	 {2010},
+  editor = 	 {Yee Whye Teh and Mike Titterington},
+  volume = 	 {9},
+  series = 	 {Proceedings of Machine Learning Research},
+  address = 	 {Chia Laguna Resort, Sardinia, Italy},
+  month = 	 {13--15 May},
+  publisher = 	 {PMLR},
+}
+
+@misc{adam_optimizer,
+    title={Adam: A Method for Stochastic Optimization},
+    author={Diederik P. Kingma and Jimmy Ba},
+    year={2014},
+    eprint={1412.6980},
+    archivePrefix={arXiv},
+    primaryClass={cs.LG}
 }
 
 @article{krizhevsky_2017,
@@ -78,6 +93,16 @@ month={June},}
     primaryClass={cs.CV}
 }
 
+@misc{ioffe_2015,
+    title={Batch Normalization: Accelerating Deep Network Training by
+                  Reducing Internal Covariate Shift},
+    author={Sergey Ioffe and Christian Szegedy},
+    year={2015},
+    eprint={1502.03167},
+    archivePrefix={arXiv},
+    primaryClass={cs.LG}
+}
+
 @misc{teichmann_2018,
     title={Detect-to-Retrieve: Efficient Regional Aggregation for Image Search},
     author={Marvin Teichmann and Andre Araujo and Menglong Zhu and Jack Sim},
@@ -86,3 +111,44 @@ month={June},}
     archivePrefix={arXiv},
     primaryClass={cs.CV}
 }
+
+@book{goodfellow_2016,
+    title={Deep Learning},
+    author={Ian Goodfellow and Yoshua Bengio and Aaron Courville},
+    publisher={MIT Press},
+    note={\url{http://www.deeplearningbook.org}},
+    year={2016}
+}
+
+@misc{GENKI-4K,
+    Author = {\url{http://mplab.ucsd.edu}},
+    Title = {{The MPLab GENKI Database, GENKI-4K Subset}}
+}
+
+@misc{keras,
+  title={Keras},
+  author={Chollet, Fran\c{c}ois and others},
+  year={2015},
+  howpublished={\url{https://keras.io}},
+}
+
+@article{opencv,
+    author = {Bradski, G.},
+    citeulike-article-id = {2236121},
+    journal = {Dr. Dobb's Journal of Software Tools},
+    keywords = {bibtex-import},
+    posted-at = {2008-01-15 19:21:54},
+    priority = {4},
+    title = {{The OpenCV Library}},
+    year = {2000}
+}
+
+@techreport{rossum_1995,
+ author = {Rossum, Guido},
+ title = {Python Reference Manual},
+ year = {1995},
+ source = {http://www.ncstrl.org:8900/ncstrl/servlet/search?formname=detail\&id=oai%3Ancstrlh%3Aercim_cwi%3Aercim.cwi%2F%2FCS-R9525},
+ publisher = {CWI (Centre for Mathematics and Computer Science)},
+ address = {Amsterdam, The Netherlands, The Netherlands},
+}
+
